# sudoku_prover

./: .gitignore  9x9Pairs.lean  README.md  SudokuLean.lean  SudokuProverLogic.lean  TODO  input.txt  lake-manifest.json  lakefile.toml  main.py  next_steps.txt  notes.txt  pyproject.toml  reserved_code.txt  suko.json  suko.lark  suko_file_def.txt  wishes.txt
.github/workflows/: lean_action_ci.yml
Interface/: cli.py  main.py
Puzzles/: NormalSudoku.suko  Template.lean  Template.lean.txt
Puzzles/Framework/: 4x4FrameworkTest.lean  4x4FrameworkTest.suko  4x4FrameworkTestLetters.suko  9x9Easy.suko  9x9Pairs.lean  9x9Pairs.suko
Puzzles/LessThans/: 4x4LessThanEasy.lean  4x4LessThanHarder.lean
Puzzles/Thermometers/: 4x4LessThanEasy.lean  4x4LessThanHarder.lean  9x9Thermometers.lean  Thermo_Sudoku_Phistomefel.lean
SudokuLean/: BaselineConstraints.lean  Basic.lean  Symbols4.lean  Symbols9.lean  Tactics.lean  Thermometer.lean  ToNat.lean
SudokuProverLogic/: BaselineConstraints.lean  Symbols4.lean  Symbols9.lean  SymbolsABCD.lean  Tactics.lean  Thermometer.lean  ToNat.lean
docs/: suko_file.md
sudoku_prover_app/: main.py
sudoku_prover_app/core/: argument_parser.py  dummy_lean_repl.py  dummy_proof_engine.py  journal.py  lean_repl.py  proof_engine.py  puzzle.py  registry.py  types.py
sudoku_prover_app/io/: file_exporter.py  file_parser.py
sudoku_prover_app/tactics/: __init__.py  (+1 more)
sudoku_prover_ui/: basic_tactics.py  dummy_proof_engine.py  file_exporter.py  file_parser.py  journal.py  lean_repl.py  main.py  proof_engine.py  puzzle.py  solver_ui.py  sudoku_state.py
(+1 files in other folders)
