[project]
name = "sudoku_prover"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "arcade>=3.3.3",
    "lark>=1.3.1",
    "leanclient>=0.9.4",
]

[tool.uv]
package = true

[project.scripts]
sudoku = "sudoku_prover_ui.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sudoku_prover_ui"]
