[project]
name = "sudoku_prover"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "arcade>=3.3.3",
    "lark>=1.3.1",
    "leanclient",
]

[tool.uv]
package = true

[tool.uv.sources]
leanclient = { git = "https://github.com/abcrtzyn/leanclient.git" }

[project.scripts]
sudoku = "sudoku_prover_app.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sudoku_prover_app"]
